<resources>
    <string name="app_name">ContactBook</string>
    <string name="contact_name">%1$s %2$s</string>

    <string name="hint_first_name">First Name</string>
    <string name="button_save">Save</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_last_name">Last name</string>
    <string name="empty_not_saved">not added</string>
    <string name="user_added">User successfully added</string>


    <string name="error_invalid_email">Email address is not invalid</string>
    <string name="error_invalid_phone">Phone number is not invalid</string>
    <string name="error_invalid_name">Name is not invalid</string>
</resources>
